css/styles.css
/* ... */
.main-nav-item {
  margin-right: 40px;
}

.main-nav-item:last-child {
  margin-right: 0;
}

.main-nav-link {
  font-weight: 500;
  line-height: 1.5;
  color: #2e2f42;
  display: inline-block;
  padding-top: 24px;
  padding-bottom: 24px;
  position: relative;
  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.main-nav-link.current::after {
  display: block;
  content: '';
  position: absolute;
  left: 0;
  bottom: -1px;
  width: 100%;
  height: 4px;
  border-radius: 2px;
  background-color: #404bbf;
}

.main-nav-link:hover,
.main-nav-link:focus,
.main-nav-link.current {
  color: #404bbf;
}

.contacts {
  font-style: normal;
}

.contacts-list {
  display: flex;
  gap: 40px;
}

@media screen and (min-width: 768px) and (max-width: 1157.98px) {
  .contacts-list {
    flex-direction: column;
    gap: 12px;
  }
}

.contacts-link {
  color: #434455;
  line-height: 1.5;
  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

@media screen and (max-width: 1157.98px) {
  .contacts-link {
    font-size: 12px;
    line-height: 1.17;
  }
}

.contacts-link:hover,
.contacts-link:focus {
  color: #404bbf;
}

/* --------------- Burger menu ---------------*/
.burger-menu-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 24px;
  height: 24px;
  margin-left: auto;
  padding: 0;
  background-color: transparent;
  border: 0;
}

@media screen and (min-width: 768px) {
  .burger-menu-btn {
    display: none;
  }
}
/* --------------- Hero section ------------ */

.hero {
  background-color: #2e2f42;
  background-image: linear-gradient(
      to bottom,
      rgba(46, 47, 66, 0.7),
      rgba(46, 47, 66, 0.7)
    ),
    url('../images/hero-bg_mob@1x.jpg');
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  max-width: 320px;
  margin: 0 auto;
}

@media screen and (min-resolution: 192dpi) {
  .hero {
    background-image: linear-gradient(
        to bottom,
        rgba(46, 47, 66, 0.7),
        rgba(46, 47, 66, 0.7)
      ),
      url('../images/hero-bg_mob@2x.jpg');
  }
}

.hero-section {
  padding: 72px 0;
}

.hero-title {
  color: #fff;
  font-size: 36px;
  font-weight: 700;
  line-height: 1.11;
  letter-spacing: 0.02em;
  text-align: center;
  text-transform: capitalize;
  max-width: 216px;
  margin: 0 auto 72px;
}

@media screen and (min-width: 768px) {
  .hero {
    max-width: 768px;
    background-image: linear-gradient(
        to bottom,
        rgba(46, 47, 66, 0.7),
        rgba(46, 47, 66, 0.7)
      ),
      url('../images/hero-bg_tab@1x.jpg');
  }
  .hero-section {
    padding: 112px 0;
  }
  .hero-title {
    color: #fff;
    font-size: 56px;
    font-weight: 700;
    line-height: 1.07;
    letter-spacing: 0.02em;
    text-align: center;
    max-width: 496px;
    margin: 0 auto 36px;
  }
}

@media screen and (min-width: 768px) and (min-resolution: 192dpi) {
  .hero {
    background-image: linear-gradient(
        to bottom,
        rgba(46, 47, 66, 0.7),
        rgba(46, 47, 66, 0.7)
      ),
      url('../images/hero-bg_tab@2x.jpg');
  }
}

@media screen and (min-width: 1158px) {
  .hero {
    max-width: 1440px;
    background-image: linear-gradient(
        to bottom,
        rgba(46, 47, 66, 0.7),
        rgba(46, 47, 66, 0.7)
      ),
      url('../images/hero-bg@1x.jpg');
  }
  .hero-section {
    padding: 188px 0;
  }
  .hero-title {
    margin: 0 auto 48px;
  }
}

@media screen and (min-width: 1158px) and (min-resolution: 192dpi) {
  .hero {
    background-image: linear-gradient(
        to bottom,
        rgba(46, 47, 66, 0.7),
        rgba(46, 47, 66, 0.7)
      ),
      url('../images/hero-bg@2x.jpg');
  }
}

.hero-button,
.modal-submit-btn {
  background-color: #4d5ae5;
  color: #fff;
  font-weight: 500;
  line-height: 1.5;
  letter-spacing: 0.04em;
  display: block;
  text-align: center;
  cursor: pointer;
  margin: 0 auto;
  padding: 16px 32px;
  border: none;
  border-radius: 4px;
  min-width: 169px;
  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.hero-button:hover,
.hero-button:focus,
.modal-submit-btn:hover,
.modal-submit-btn:focus {
  background-color: #404bbf;
}

/* ------------- Features section ----------- */
.features-list {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 72px;
}

.features-item {
  width: 100%;
}

@media screen and (min-width: 768px) {
  .features-list {
    flex-direction: row;
    flex-wrap: wrap;
    gap: 72px 24px;
  }
  .features-item {
    width: calc((100% - 24px) / 2);
  }
}

@media screen and (min-width: 1158px) {
  .features-list {
    flex-direction: row;
    flex-wrap: nowrap;
    align-items: baseline;
    gap: 24px;
  }
  .features-item {
    width: calc((100% - 72px) / 4);
  }
}

.features-item-title {
  font-size: 36px;
  font-weight: 700;
  line-height: 1.11;
  letter-spacing: 0.02em;
  color: #2e2f42;
  margin-bottom: 8px;
  text-align: center;
}

@media screen and (min-width: 1158px) {
  .features-item-title {
    font-size: 20px;
    font-weight: 500;
    line-height: 1.2;
  }
}

.features-item-text {
  font-weight: 500;
}

@media screen and (min-width: 1158px) {
  .features-item-text {
    font-weight: 400;
  }
}

.features-item-icon-bg {
  display: none;
}

@media screen and (min-width: 1158px) {
  .features-item-icon-bg {
    width: 264px;
    height: 112px;
    border-radius: 4px;
    border: 1px solid #8e8f99;
    background-color: #f4f4fd;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-bottom: 8px;
  }
}

/* Our team section */

.our-team {
  background-color: #f4f4fd;
}

.our-team-title {
  font-size: 36px;
  font-weight: 700;
  line-height: 1.11;
  text-transform: capitalize;
  text-align: center;
  letter-spacing: 0.02em;
  color: #2e2f42;
  margin-bottom: 72px;
}

.our-team-list {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 72px;
}
/* ... */

